fix: spinner not showing when user adds application

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,7 +108,7 @@
 
 .tiptap {
   > * + * {
-    margin-top: 0.75em;
+    margin-top: 1.75em;
   }
 
   h1,
